WhereAndWhen Stuck Problem Fixed

--- a/Css/style.css
+++ b/Css/style.css
@@ -196,6 +196,7 @@ hr {
   margin-top: 70px;
   margin-bottom: 70px;
   padding: 20px;
+  transition: all 0.6s ease-in-out;
 }
 
 .SubWhereAndWhen2 {
